Renamed label -> category, link > item

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<title>LinkBrowser</title>
+<title>Categorise</title>
 <base href="/">
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
 <body>
 	<div class="ui divider"></div>
 	<div class="ui container">
-		<h1>Angular Link Browser App</h1>
+		<h1>Angular Categorise App</h1>
 	</div>
 	<div class="ui divider"></div>
 
